[package]
authors = ["equal-l2 <eng.equall2@gmail.com>"]
name = "rasppi-driver"
version = "0.1.0"
license = "MIT"

[dependencies]
lazy_static = "1.0"
rocket = { version = "0.3", features = ["tls"] }
rocket-simpleauth = "0.4.0"
rocket_codegen = "0.3"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4.6"
chan = "0.1.21"
chan-signal = "0.3.1"
pbkdf2 = "0.2.1"

[dependencies.rppal]
optional = true
version = "0.7.1"

[features]
default = ["gpio"]
gpio = ["rppal"]
