[package]
authors = ["equal-l2 <eng.equall2@gmail.com>"]
name = "rasppi-driver"
version = "0.1.0"
license = "MIT"

[dependencies]
lazy_static = "1.0"
rocket = { version = "0.3", features = ["tls"] }
rocket-simpleauth = "0.4.0"
rocket_codegen = "0.3"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4.6"
chan = "0.1.21"
chan-signal = "0.3.1"
pbkdf2 = "0.2.1"
serde_json = "1.0.27"

[dependencies.rppal]
optional = true
version = "0.8"

[dependencies.rocket_contrib]
default_features = false
features = ["json"]
version = "0.3"

[features]
default = ["gpio", "hls"]
gpio = ["rppal"]
hls = []
